<resources>
    <string name="app_name">FinalProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rating">rating</string>
    <string name="search">search</string>
    <string name="minusButton" />
    <string name="checkout">Check Out</string>
    <string name="user_name">username</string>
    <string name="password">password</string>
    <string name="sign_in">signin</string>
    <string name="Email">Email</string>
    <string name="sign_up">signup</string>
    <string name="email">email</string>
    <string name="loging">Loging</string>
</resources>